k8s/cinelly/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: backend
  name: cinelly
  annotations:
      nginx.ingress.kubernetes.io/use-regex: "true"
      cert-manager.io/issuer: letsencrypt-nginx
      nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: www.cinelly.online
      http:
        paths:
          - path: /expertises/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: expertises
                port:
                  number: 3001
          - path: /jobs/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: jobs
                port:
                  number: 3000
